# Equipo5_Memoria_ISC2A

./: CMakeLists.txt  README.md  Raylib.docx
Investigacion_Pruebas/pruebaUsusarios/: usuarios.cpp
pruebaR/: CMakeLists.txt  img.cpp  main.cpp
src/: memorama.cpp
